--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -2,6 +2,7 @@
 <!-- http://localhost:3000/isolated/exercise/01.html -->
 
 <!-- 🐨 Create (in HTML) a <body> with a <div> with the id of "root" -->
+
 <!-- 🐨 Then create a <script type="module"> for your JavaScript -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script#attributes -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules -->
@@ -17,3 +18,15 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+
+<body>
+  <div id="root">
+    <script type="module">
+      const newDiv = document.createElement('div')
+      newDiv.textContent = 'Hello World'
+      newDiv.classList.add('container')
+
+      document.getElementById('root').appendChild(newDiv)
+    </script>
+  </div>
+</body>
