solved exercise 2: intro to raw React APIs

--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -25,6 +25,16 @@
     // // This is similar to ReactDOM.createRoot().render()
     // rootElement.append(element)
 
+    const reactEl = React.createElement(
+      'div',
+      {
+        className: 'container',
+      },
+      'Hello World, fella!',
+    )
+    const root = ReactDOM.createRoot(rootElement)
+    root.render(reactEl)
+
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
     // 💰 The example in the markdown file should be a good hint for you.
