--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -21,13 +21,17 @@
     //   children: 'Hello World',
     // })
 
-    const element = <div className="container">Hello World, fella</div>
+    // const element = <div className="container">Hello World, fella</div>
 
     // 💰 there are a few subtle differences between JSX and HTML. One such
     // difference is how you apply a class to an element in JSX is by using
     // `className` rather than `class`!
     // 📜 You can learn the differences between JSX and HTML syntax from the React docs here:
     // https://reactjs.org/docs/dom-elements.html#differences-in-attributes
+
+    const className = 'container'
+    const children = 'Hello World!!!'
+    const element = <div className={className}>{children}</div>
 
     ReactDOM.createRoot(document.getElementById('root')).render(element)
   </script>
