--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -11,10 +11,17 @@
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
+    // const element = (
+    //   <div className="container">
+    //     {message({children: 'Hello World!!!'})}
+    //     {message({children: 'Goodbye World!!!'})}
+    //   </div>
+    // )
+
     const element = (
       <div className="container">
-        {message({children: 'Hello World!!!'})}
-        {message({children: 'Goodbye World!!!'})}
+        {React.createElement(message, {children: 'Hello World!!!'})}
+        {React.createElement(message, {children: 'Goodbye World!!!'})}
       </div>
     )
 
