solved extra credit 2 exercise from the previous one

--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -18,16 +18,16 @@
     //   </div>
     // )
 
-    const element = (
-      <div className="container">
-        {React.createElement(message, {children: 'Hello World!!!'})}
-        {React.createElement(message, {children: 'Goodbye World!!!'})}
-      </div>
-    )
-
-    function message({children}) {
+    function Message({children}) {
       return <div className="message">{children}</div>
     }
+
+    const element = (
+      <div className="container">
+        <Message>Hello World!!!</Message>
+        <Message>Goodbye World!!!</Message>
+      </div>
+    )
 
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
     ReactDOM.createRoot(document.getElementById('root')).render(element)
