--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -18,14 +18,45 @@
     //   </div>
     // )
 
-    function Message({children}) {
-      return <div className="message">{children}</div>
+    // function Message({children}) {
+    //   return <div className="message">{children}</div>
+    // }
+
+    // const element = (
+    //   <div className="container">
+    //     <Message>Hello World!!!</Message>
+    //     <Message>Goodbye World!!!</Message>
+    //   </div>
+    // )
+
+    function Message({subject, greeting}) {
+      return (
+        <div className="message">
+          {greeting}, {subject}
+        </div>
+      )
+    }
+
+    const Proptypes = {
+      string(props, propName, componentName) {
+        const type = typeof props[propName]
+        if (type !== 'string') {
+          return new Error(
+            `Hey, the component ${componentName} needs the prop ${propName} to be a string`,
+          )
+        }
+      },
+    }
+
+    Message.propTypes = {
+      subject: Proptypes.string,
+      greeting: Proptypes.string,
     }
 
     const element = (
       <div className="container">
-        <Message>Hello World!!!</Message>
-        <Message>Goodbye World!!!</Message>
+        <Message greeting="Hello" subject="World" />
+        <Message greeting="Goodbye" subject="World" />
       </div>
     )
 
