--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,6 +6,7 @@
   <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
 
@@ -54,7 +55,7 @@
     }
 
     const element = (
-      <div className="container">
+      <div className="message">
         <Message greeting="Hello" subject="World" />
         <Message greeting="Goodbye" subject="World" />
       </div>
